--- a/PhoneBook/Views/Home/CreateContact.cshtml
+++ b/PhoneBook/Views/Home/CreateContact.cshtml
@@ -38,20 +38,20 @@
                         <form method="post" asp-action="CreateContact" asp-controller="Home">
                             <p style="    font-size: 13px;">Please Enter Your Contact Information</p>
                             <div class="form-outline mb-4">
+                                <label class="form-label" for="form2Example11">First Name:</label>
                                 <input type="text" id="form2Example11" class="form-control"
                                        name="FirstName" placeholder="First Name" />
-                                <label class="form-label" for="form2Example11">First Name</label>
                             </div>
                             <div class="form-outline mb-4">
+                                <label class="form-label" for="form2Example11">Last Name:</label>
+
                                 <input name="LastName" type="text" id="form2Example11" class="form-control"
                                        placeholder="Last Name" />
-                                <label class="form-label" for="form2Example11">Last Name</label>
                             </div>
                             <div class="form-outline mb-4">
+                                <label class="form-label" for="form2Example11">Phone Number:</label>
                                 <input name="PhoneNumber" maxlength="12" type="tel" id="form2Example11" class="form-control"
                                        placeholder="Phone number" />
-                                <label class="form-label" for="form2Example11">Phone Number</label>
-
                             </div>
 
                             <div class="form-outline mb-4">
