--- a/PhoneBook/Views/Home/CreateContact.cshtml
+++ b/PhoneBook/Views/Home/CreateContact.cshtml
@@ -16,6 +16,7 @@
         Swal.fire(
             'Created',
             'Contact SuccssFully Created',
+            'success'
         )
         setTimeout(function () {
             window.location.href = '/home';
