--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
         Swal.fire(
             'Contact List is Empty ',
             'Please Add Some Contacts',
+            'info'
         )
     };
 </script>
@@ -88,6 +89,7 @@
                     Swal.fire(
                         'Deleted',
                         'Contact SuccssFully Deleted',
+                        'success'
                     )
                     setTimeout(function () {
                         location.reload();
