--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -52,6 +52,8 @@
                             <i class="fa fa-mobile" aria-hidden="true"></i>
                             <label type="text" class="login__input">@item.PhoneNumber</label>
                         </div>
+
+                        <a type="button" class="btn btn-primary" asp-action="GetContact" asp-controller="Home" asp-route-mobile="@item.PhoneNumber">Edit Contact</a>
                         <div class="profile-image d-flex justify-content-end mt-5" style="font-size: 150px;font-family: fantasy;color: white;">
                             #@Index
                         </div>
@@ -71,34 +73,36 @@
     <p>By.TwentyThree | 2022 </p>
 </div>
 <script>
-    function sendToBackEnd(user) {
-        let data = { phoneNumber: user };
-        fetch('/home/DeleteContact',
-            {
-                method: 'POST', // or 'PUT'
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                redirect: "follow",
-                body: JSON.stringify(data),
-            })
-            .then(response => response.text())
-            .then(result => {
-                let res = JSON.parse(result);
-                if (res == 200) {
-                    Swal.fire(
-                        'Deleted',
-                        'Contact SuccssFully Deleted',
-                        'success'
-                    )
-                    setTimeout(function () {
-                        location.reload();
-                    }, 2000);
-                }
-            }).catch(error => {
-                console.log('error', error)
-            });
-    }
+      function sendToBackEnd(user) {
+          let data = { phoneNumber: user };
+          fetch('/home/DeleteContact',
+              {
+                  method: 'POST', // or 'PUT'
+                  headers: {
+                      'Content-Type': 'application/json',
+                  },
+                  redirect: "follow",
+                  body: JSON.stringify(data),
+              })
+              .then(response => response.text())
+              .then(result => {
+                  let res = JSON.parse(result);
+                  if (res == 200) {
+                      Swal.fire(
+                          'Deleted',
+                          'Contact SuccssFully Deleted',
+                          'success'
+                      )
+                      setTimeout(function () {
+                          location.reload();
+                      }, 2000);
+                  }
+              }).catch(error => {
+                  console.log('error', error)
+              });
+      }
+
+
 </script>
 
 
