--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -77,34 +77,77 @@
 
 
 <script>
-      function sendToBackEnd(user) {
-          let data = { phoneNumber: user };
-          fetch('/home/DeleteContact',
-              {
-                  method: 'POST', // or 'PUT'
-                  headers: {
-                      'Content-Type': 'application/json',
-                  },
-                  redirect: "follow",
-                  body: JSON.stringify(data),
-              })
-              .then(response => response.text())
-              .then(result => {
-                  let res = JSON.parse(result);
-                  if (res == 200) {
-                      Swal.fire(
-                          'Deleted',
-                          'Contact SuccssFully Deleted',
-                          'success'
-                      )
-                      setTimeout(function () {
-                          location.reload();
-                      }, 2000);
-                  }
-              }).catch(error => {
-                  console.log('error', error)
-              });
-      }
+
+
+    // 1) Delete Contact With Javascript Fetch
+    function sendToBackEnd(user) {
+        let data = { searc: user, id: 123 };
+        fetch('/home/DeleteContact',
+            {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                // redirect: "follow",
+                body: JSON.stringify(data),
+            })
+            .then(response => response.text())
+            .then(result => {
+
+
+
+                let res = JSON.parse(result);
+
+                if (res == 200) {
+                    Swal.fire(
+                        'Deleted',
+                        'Contact SuccssFully Deleted',
+                        'success'
+                    )
+                    setTimeout(function () {
+                        location.reload();
+                    }, 2000);
+                }
+            }).catch(error => {
+                console.log('error', error)
+
+            });
+    }
+
+
+
+
+    // 2) Delete Contact With Jquery Ajax
+
+
+
+    // function sendToBackEnd(user) {
+    //     let data = { phoneNumber: user };
+
+    //     $.ajax({
+    //         url: '/home/DeleteContact',
+    //         type: 'POST',
+    //         contentType: 'application/json',
+    //         data: JSON.stringify(data),
+    //         success: function (result) {
+    //             let res = JSON.parse(result);
+    //             if (res == 200) {
+    //                 Swal.fire(
+    //                     'Deleted',
+    //                     'Contact Successfully Deleted',
+    //                     'success'
+    //                 );
+    //                 setTimeout(function () {
+    //                     location.reload();
+    //                 }, 2000);
+    //             }
+    //         },
+    //         error: function (error) {
+    //             console.log('error', error);
+    //         }
+    //     });
+    // }
+
 
 
 </script>
